packages/kit/test/apps/basics/src/routes/errors/page-endpoint/get-implicit.js
import { FancyError } from './_shared.js';

export const get = () => {
	throw new FancyError('oops');
};
